// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test BackButton should render back button when contentType is Search 1`] = `
<body>
  <div>
    <button
      class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only back-button"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="left"
          class="anticon anticon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</body>
`;

exports[`test BackButton should render back button when contentType is SubType 1`] = `
<body>
  <div>
    <button
      class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text back-button"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="left"
          class="anticon anticon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
      <span>
        Shape
      </span>
    </button>
  </div>
</body>
`;

exports[`test BackButton should render title when contentType is MainType 1`] = `
<body>
  <div>
    <div
      class="title"
    >
      Elements
    </div>
  </div>
</body>
`;
